--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div class="slides">
 
       <section>
-        <h1>Microservices in ABAP</h1>
+        <h1>ABAP File Formats</h1>
+        <a href="https://www.abapconf.org"><img src="./img/abap_logo_blau_2022.svg" class="plain" height="200px"></a><br>
       </section>
 
       <section>Slide 1</section>
