--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 
       <section>Slide 1</section>
 
+      <section>
+        <img src="./img/schemas1.drawio.svg" class="plain">
+      </section>
+
+      <section>
+        <img src="./img/schemas2.drawio.svg" class="plain">
+      </section>
+
       <section>Slide 2
         <aside class="notes">
           <p>Some notes</p>
