--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
   <link rel="icon" type="image/svg+xml" href="./favicon.svg" sizes="any">
   <link rel="mask-icon" href="./favicon.svg" color="#000000">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/v4-shims.min.css"
+    integrity="sha256-wN7QJaqAwQ03kgUhyN4EU2phRdDkLrQYbFe0EvpQ60U=" crossorigin="anonymous" />
   <link rel="stylesheet" href="ext/reveal.js/dist/reset.css">
   <link rel="stylesheet" href="ext/reveal.js/dist/reveal.css">
   <link rel="stylesheet" href="ext/reveal.js/dist/theme/black.css">
 
   <!-- Theme used for syntax highlighted code -->
   <link rel="stylesheet" href="ext/reveal.js/plugin/highlight/monokai.css">
+
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -24,12 +30,39 @@
 
       <section>
         <h1>ABAP File Formats</h1>
-        <a href="https://www.abapconf.org"><img src="./img/abap_logo_blau_2022.svg" class="plain" height="200px"></a><br>
+        <a href="https://www.abapconf.org"><img src="./img/abap_logo_blau_2022.svg" class="plain"
+            height="200px"></a><br>
       </section>
 
-      <section>Slide 1</section>
+      <section>
+        <ul>
+          <li>Albert Mink, <a href="https://sap.com">@SAP</a></li>
+          <li>Lars Hvam, <a href="https://heliconialabs.com">@heliconialabs</a></li>
+        </ul>
+      </section>
 
       <section>
+        Disclaimer
+      </section>
+
+      <section>
+        history, formats CTS -> saplink -> abapGit
+      </section>
+
+      <section>
+        Why a new format
+      </section>
+
+      <section>
+        how a new format
+      </section>
+
+      <section>
+        example format
+      </section>
+
+      <section>
+        <h2>how its generated(to be)</h2>
         <img src="./img/schemas1.drawio.svg" class="plain">
       </section>
 
@@ -37,14 +70,44 @@
         <img src="./img/schemas2.drawio.svg" class="plain">
       </section>
 
-      <section>Slide 2
-        <aside class="notes">
-          <p>Some notes</p>
-        </aside>
-        <p>Some slide text</p>
-        <aside class="notes">
-          <p>and some more notes</p>
-        </aside>
+      <section>
+        show some Eclipse stuff?
+      </section>
+
+      <section>
+        abapGit implementations, display the list here
+      </section>
+
+      <section>
+        when is it activated by default in abapGit?
+      </section>
+
+      <section>
+        abapGit handling old xml files => automatic conversion
+      </section>
+
+      <section>
+        <h2>Links</h2>
+        <ul>
+          <li><a href="https://github.com/SAP/abap-file-formats">github.com/SAP/abap-file-formats</a></li>
+          <li><a href="https://github.com/SAP/abap-file-formats-tools">github.com/SAP/abap-file-formats-tools</a></li>
+          <li><a href="https://abapgit.org">abapgit.org</a></li>
+          <li><a href="https://abaplint.org">abaplint.org</a></li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>#ABAPisNotDead</h2>
+        <a href="https://larshp.github.io/abapconf2022/">https://larshp.github.io/abapconf2022/</a>
+        <br>
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License"
+            width="200" class="plain" src="img/by.svg" /></a>
+        <br>
+        <i class="fa fa-sun-o plain"></i>
+      </section>
+
+      <section>
+        <i class="fa fa-question fa-6x plain"></i>
       </section>
 
     </div>
