--- a/index.html
+++ b/index.html
@@ -46,19 +46,23 @@
       </section>
 
       <section>
-        history, formats CTS -> saplink -> abapGit
+        <h2>history, formats</h2>
+        CTS -> saplink -> abapGit
       </section>
 
       <section>
-        Why a new format
+        <h2>Why?</h2>
+        Open formal descriptions
       </section>
 
       <section>
-        how a new format
+        <h2>How?</h2>
+        JSON Schema
       </section>
 
       <section>
-        example format
+        <h2>Example</h2>
+        format
       </section>
 
       <section>
