slide numbers and no transition

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
     // - https://revealjs.com/config/
     Reveal.initialize({
       hash: true,
-
+      slideNumber: true,
+      transition: 'none',
       // Learn about plugins: https://revealjs.com/plugins/
       plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
     });
