get the disclaimer (if needed) at one slide and looking good

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <section>
         <h2>Disclaimer</h2>
-        <p class="r-fit-text">
+        <p style="font-size:20px" align="justify">
           The information in this presentation is confidential and proprietary to SAP and may not be disclosed without
           the permission of SAP.
           Except for your obligation to protect confidential information, this presentation is not subject to your
