Put AFF objects available in abapGit

--- a/index.html
+++ b/index.html
@@ -231,7 +231,45 @@
       </section>
 
       <section>
-        abapGit implementations, display the list here
+        <h2>Available AFF objects in abapGit</h2>
+        <table style="font-size:32px">
+          <tr>
+            <th>Type</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>CHKC</td>
+            <td>ATC Check Category</td>
+          </tr>
+          <tr>
+            <td>CHKO</td>
+            <td>ATC Check</td>
+          </tr>
+          <tr>
+            <td>CHKV</td>
+            <td>ATC Check Variant</td>
+          </tr>
+          <tr>
+            <td>EVTB</td>
+            <td>Event Binding</td>
+          </tr>
+          <tr>
+            <td>INTF</td>
+            <td>Interface (experimental)</td>
+          </tr>
+          <tr>
+            <td>NONT</td>
+            <td>SAP Object Node Type</td>
+          </tr>
+          <tr>
+            <td>RONT</td>
+            <td>SAP Object Types</td>
+          </tr>
+          <tr>
+            <td>SMBC</td>
+            <td>Business Configuration Maintenance Objects</td>
+          </tr>
+        </table>
       </section>
 
       <section>
