--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
       </section>
 
       <section>
-        <h2>Why?</h2>
-        Open formal descriptions
+        <h2>Why ABAP file formats (AFF)?</h2>
+        <img src="./img/db.png" class="plain" height="200">
+        <img src="./img/arrows.png" class="plain" height="200">
+        <img src="./img/file.png" class="plain" height="200">
+        <p>Open, formal descriptions</p>
       </section>
 
       <section>
