--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
 
             <div class="col">
               ADT History/Compare
-              <img src="./img/adt_compare.png" class="plain" height="400px">
+              <img src="./img/adt_compare.png" class="plain">
             </div>
 
             <div class="col">
               abapGit
-              <img src="./img/abapgit_chkv.png" class="plain" height="400px">
+              <img src="./img/abapgit_chkv.png" class="plain">
             </div>
         </section>
 
