--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
 
       <section>
         <h2>How?</h2>
-        JSON Schema
+        <img src="./img/json.png" class="plain" height="160">
+        <p>AFF specifies a JSON Schema per object type</p>
+        <p>JSON Schema is generated from an ABAP type</p>
+        <p>ABAP type is the common basis for serializers</p>
       </section>
 
       <section>
