--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="./img/db.png" class="plain" height="200">
         <img src="./img/arrows.png" class="plain" height="200">
         <img src="./img/file.png" class="plain" height="200">
-        <p>Open, formal descriptions</p>
+        <p>Transparent and common understanding of file content</p>
       </section>
 
       <section>
