add vision slide

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="./img/db.png" class="plain" height="200">
         <img src="./img/arrows.png" class="plain" height="200">
         <img src="./img/file.png" class="plain" height="200">
-        <p>Transparent and common understanding of file content</p>
+        <p>Transparent and common understanding of file content that is <em>human-readable, complete</em> and <em> without redundancy</em></p>
       </section>
 
       <section>
@@ -106,7 +106,7 @@
             </tr>
             <tr>
               <th>object_name.intf.json</th>
-              <th>Metadata file</th>
+              <th style="color:#42affa">Metadata file</th>
             </tr>
           </table>
         </section>
@@ -206,21 +206,23 @@
           </div>
 
         </section>
+      </section>
 
-        <section>
-          <h2>One file</h2>
-          <div class="container">
+      <section>
+        <h2>AFF vision of ONE format</h2>
 
-            <div class="col">
-              ADT History/Compare
-              <img src="./img/adt_compare.png" class="plain">
-            </div>
+        <div class="container">
 
-            <div class="col">
-              abapGit
-              <img src="./img/abapgit_chkv.png" class="plain">
-            </div>
-        </section>
+          <div class="col">
+            <p>ADT History/Compare</p>
+            <img src="./img/adt_compare.png" class="plain">
+          </div>
+
+          <div class="col">
+            <p>abapGit</p>
+            <img src="./img/abapgit_chkv.png" class="plain">
+            <p>gCTS</p>
+          </div>
 
       </section>
 
