Public definition, see #12

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="./img/db.png" class="plain" height="200">
         <img src="./img/arrows.png" class="plain" height="200">
         <img src="./img/file.png" class="plain" height="200">
-        <p>Transparent and common understanding of file content that is <em>human-readable, complete</em> and <em> without redundancy</em></p>
+        <p>Public definition of file content that is <em>human-readable, complete</em> and <em> without redundancy</em></p>
       </section>
 
       <section>
