--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
 
       <section>
-        <h2>history, formats</h2>
+        <h2>History of file formats</h2>
         CTS -> saplink -> abapGit
       </section>
 
