--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <section>
         <h2>History of file formats</h2>
-        CTS -> saplink -> abapGit
+        <img src="./img/timeline.drawio.svg" class="plain" width="400px">
       </section>
 
       <section>
