--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
       <section>
         <h2>History of file formats</h2>
+        Main task to serialize to files and deserialize to ABAP systems
         <img src="./img/timeline.drawio.svg" class="plain" width="400px">
       </section>
 
