some more words

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       </section>
 
       <section>
-        <h2>History of file formats</h2>
-        Main task to serialize to files and deserialize to ABAP systems
+        <h2>History of sharing ABAP code</h2>
+        <p>Task: serialize to files and deserialize to ABAP systems</p>
         <img src="./img/timeline.drawio.svg" class="plain" width="400px">
       </section>
 
