--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
       </section>
 
       <section>
-        <h2>history, formats</h2>
-        CTS -> saplink -> abapGit
+        <h2>History of sharing ABAP code</h2>
+        <p>Task: serialize to files and deserialize to ABAP systems</p>
+        <img src="./img/timeline.drawio.svg" class="plain" width="400px">
       </section>
 
       <section>
