--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 
       <section>
         <h2>History of sharing ABAP code</h2>
-        <p>Task: serialize to files and deserialize to ABAP systems</p>
         <img src="./img/timeline.drawio.svg" class="plain" width="400px">
+        <p>Let's talk about the ABAP file formats</p>
+        <img src="./img/aff.drawio.svg" class="plain" width="400px">
       </section>
 
       <section>
