not needed elsewhere

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
           <p>Ensure interchangeability by formatting</p>
           <ul>
             <li>UTF-8</li>
-            <li>End-of-line (EOL) marker LF ('\n')</li>
-            <li>Empty line at end-of-file (EOF)</li>
+            <li>End-of-line marker LF ('\n')</li>
+            <li>Empty line at end-of-file</li>
           </ul>
 
         </section>
