--- a/index.html
+++ b/index.html
@@ -233,7 +233,6 @@
         <h2>AFF vision of ONE format</h2>
 
         <div class="container">
-
           <div class="col">
             <p>ADT History/Compare</p>
             <img src="./img/adt_compare.png" class="plain">
@@ -244,7 +243,7 @@
             <img src="./img/abapgit_chkv.png" class="plain">
             <p>gCTS</p>
           </div>
-
+        </div>
       </section>
 
 
@@ -257,6 +256,24 @@
       </section>
 
       <section>
+        <h2>abapGit activation</h2>
+        <ul>
+          <li>Can be tested via "experimental" switch</li>
+          <li>Will be enabled when no information is lost(<a href="https://github.com/SAP/abap-file-formats/issues/106">translations</a>)</li>
+          <li>Pull old format, stage new format</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>abapGit migration</h2>
+        handling old xml files => automatic conversion
+
+        automated standalone migration path
+
+        100s of xmls, takes time
+      </section>
+
+      <section>
         <h2>how its generated(to be)</h2>
         <img src="./img/schemas1.drawio.svg" class="plain">
       </section>
@@ -266,11 +283,8 @@
       </section>
 
       <section>
-        when is it activated by default in abapGit?
-      </section>
-
-      <section>
-        abapGit handling old xml files => automatic conversion
+        <h2>Thanks to all contributors</h2>
+list, todo
       </section>
 
       <section>
