filenames as fixed font

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <h2>On filenames and formatting</h2>
           <p>Filename is composed by</p>
           <ul>
-            <li>obj_name.TYPE.json</li>
+            <li class="fixed">obj_name.TYPE.json</li>
             </ul>
           <p>Ensure interchangeability by formatting</p>
           <ul>
@@ -174,11 +174,11 @@
               <th>Description</th>
             </tr>
             <tr>
-              <th>object_name.intf.abap</th>
+              <th class="fixed">object_name.intf.abap</th>
               <th>ABAP source code</th>
             </tr>
             <tr>
-              <th>object_name.intf.json</th>
+              <th class="fixed">object_name.intf.json</th>
               <th style="color:#42affa">Metadata file</th>
             </tr>
           </table>
