--- a/index.html
+++ b/index.html
@@ -42,31 +42,11 @@
       </section>
 
       <section>
-        <h2>Disclaimer</h2>
-        <p style="font-size:20px" align="justify">
-          The information in this presentation is confidential and proprietary to SAP and may not be disclosed without
-          the permission of SAP.
-          Except for your obligation to protect confidential information, this presentation is not subject to your
-          license agreement or any other service or subscription agreement with SAP.
-          SAP has no obligation to pursue any course of business outlined in this presentation or any related document,
-          or to develop or release any functionality mentioned therein.
-          <br>
-          This presentation, or any related document and SAP's strategy and possible future developments, products and
-          or platforms directions and functionality are all subject to change and may be changed by SAP at any time for
-          any reason without notice.
-          The information in this presentation is not a commitment, promise or legal obligation to deliver any material,
-          code or functionality.
-          This presentation is provided without a warranty of any kind, either express or implied, including but not
-          limited to, the implied warranties of merchantability, fitness for a particular purpose, or non-infringement.
-          This presentation is for informational purposes and may not be incorporated into a contract. SAP assumes no
-          responsibility for errors or omissions in this presentation, except if such damages were caused by SAP’s
-          intentional or gross negligence.
-          <br>
-          All forward-looking statements are subject to various risks and uncertainties that could cause actual results
-          to differ materially from expectations.
-          Readers are cautioned not to place undue reliance on these forward-looking statements, which speak only as of
-          their dates, and they should not be relied upon in making purchasing decisions.
-        </p>
+        <h1>Disclaimer</h1>
+        <ul>
+          <li>Everything might change</li>
+          <li>Check respective licenses(MIT & Apache2)</li>
+        </ul>
       </section>
 
       <section>
@@ -160,7 +140,6 @@
             <li>End-of-line marker LF ('\n')</li>
             <li>Empty line at end-of-file</li>
           </ul>
-
         </section>
       </section>
 
