--- a/index.html
+++ b/index.html
@@ -236,24 +236,28 @@
           <li>Can be tested via "experimental" switch</li>
           <li>Will be enabled when no information is lost(<a href="https://github.com/SAP/abap-file-formats/issues/106">translations</a>)</li>
           <li>Pull old format, stage new format</li>
+          <li>Still 702 and up</li>
         </ul>
       </section>
 
       <section>
         <h2>abapGit migration</h2>
         handling old xml files => automatic conversion
-
+<br><br>
         automated standalone migration path
-
+<br><br>
         100s of xmls, takes time
       </section>
 
       <section>
-        <h2>how its generated(to be)</h2>
+        <h2>Schema Generation</h2>
+        from ABAP in ABAP<br>
         <img src="./img/schemas1.drawio.svg" class="plain">
       </section>
 
       <section>
+        <h2>Automated Schema Generation</h2>
+        for everyone in the world<br>
         <img src="./img/schemas2.drawio.svg" class="plain">
       </section>
 
